# cloudOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  driver.cpp  driver.h  gdt.cpp  gdt.h  generateRelease.sh  interrupts.cpp  interrupts.h  interruptstubs.s  kernel.cpp  keyboard.cpp  keyboard.h  linker.ld  loader.s  mouse.cpp  mouse.h  port.cpp  port.h  types.h
.cargo/: config
releases/iso/boot/grub/: grub.cfg
scripts/: build.ps1  build.sh  test.ps1  test.sh
src/: main.rs  vga_buffer.rs
