[package]
name = "cloud_os"
version = "0.0.1"
authors = ["Edwin Cloud <ecloud412@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
spin= "0.5.1"

[dependencies.lazy_static]
version = "1.3"
features = ["spin_no_std"]